# remesh_isotropic_planar

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: README.md  jacuzzi.off
include/remesh_isotropic_planar/: remesh_isotropic_planar.h  utils.h
src/: main.cpp  remesh_isotropic_planar.cpp  utils.cpp
